--- a/webdemo/WebRoot/WEB-INF/web.xml
+++ b/webdemo/WebRoot/WEB-INF/web.xml
@@ -23,6 +23,12 @@
     <servlet-name>UnitOperate</servlet-name>
     <servlet-class>common.UnitOperate</servlet-class>
   </servlet>
+   <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>ProductCategoryOperate</servlet-name>
+    <servlet-class>erp.ProductCategoryOperate</servlet-class>
+  </servlet>
   <servlet>
     <description>This is the description of my J2EE component</description>
     <display-name>This is the display name of my J2EE component</display-name>
@@ -50,6 +56,10 @@
   <servlet-mapping>
     <servlet-name>SqlOperate</servlet-name>
     <url-pattern>/servlet/SqlOperate</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>ProductCategoryOperate</servlet-name>
+    <url-pattern>/servlet/ProductCategoryOperate</url-pattern>
   </servlet-mapping>
  
   <welcome-file-list>
