--- a/webdemo/WebRoot/WEB-INF/web.xml
+++ b/webdemo/WebRoot/WEB-INF/web.xml
@@ -29,6 +29,12 @@
     <servlet-name>ProductCategoryOperate</servlet-name>
     <servlet-class>erp.ProductCategoryOperate</servlet-class>
   </servlet>
+   <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>BrandOperate</servlet-name>
+    <servlet-class>erp.BrandOperate</servlet-class>
+  </servlet>
   <servlet>
     <description>This is the description of my J2EE component</description>
     <display-name>This is the display name of my J2EE component</display-name>
@@ -60,6 +66,10 @@
   <servlet-mapping>
     <servlet-name>ProductCategoryOperate</servlet-name>
     <url-pattern>/servlet/ProductCategoryOperate</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>BrandOperate</servlet-name>
+    <url-pattern>/servlet/BrandOperate</url-pattern>
   </servlet-mapping>
  
   <welcome-file-list>
