--- a/webdemo/WebRoot/WEB-INF/web.xml
+++ b/webdemo/WebRoot/WEB-INF/web.xml
@@ -35,6 +35,18 @@
     <servlet-name>BrandOperate</servlet-name>
     <servlet-class>erp.BrandOperate</servlet-class>
   </servlet>
+   <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>EmployeeOperate</servlet-name>
+    <servlet-class>erp.EmployeeOperate</servlet-class>
+  </servlet>
+   <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>StockOperate</servlet-name>
+    <servlet-class>erp.StockOperate</servlet-class>
+  </servlet>
   <servlet>
     <description>This is the description of my J2EE component</description>
     <display-name>This is the display name of my J2EE component</display-name>
@@ -70,6 +82,14 @@
   <servlet-mapping>
     <servlet-name>BrandOperate</servlet-name>
     <url-pattern>/servlet/BrandOperate</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>StockOperate</servlet-name>
+    <url-pattern>/servlet/StockOperate</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>EmployeeOperate</servlet-name>
+    <url-pattern>/servlet/EmployeeOperate</url-pattern>
   </servlet-mapping>
  
   <welcome-file-list>
