--- a/webdemo/WebRoot/WEB-INF/web.xml
+++ b/webdemo/WebRoot/WEB-INF/web.xml
@@ -21,7 +21,7 @@
     <description>This is the description of my J2EE component</description>
     <display-name>This is the display name of my J2EE component</display-name>
     <servlet-name>UnitOperate</servlet-name>
-    <servlet-class>common.UnitOperate</servlet-class>
+    <servlet-class>Tools.UnitOperate</servlet-class>
   </servlet>
    <servlet>
     <description>This is the description of my J2EE component</description>
