--- a/webdemo/WebRoot/WEB-INF/web.xml
+++ b/webdemo/WebRoot/WEB-INF/web.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.0" 
-	xmlns="http://java.sun.com/xml/ns/javaee" 
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
-	http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
   <display-name></display-name>
   <servlet>
     <description>This is the description of my J2EE component</description>
@@ -23,25 +19,25 @@
     <servlet-name>UnitOperate</servlet-name>
     <servlet-class>Tools.UnitOperate</servlet-class>
   </servlet>
-   <servlet>
+  <servlet>
     <description>This is the description of my J2EE component</description>
     <display-name>This is the display name of my J2EE component</display-name>
     <servlet-name>ProductCategoryOperate</servlet-name>
     <servlet-class>erp.ProductCategoryOperate</servlet-class>
   </servlet>
-   <servlet>
+  <servlet>
     <description>This is the description of my J2EE component</description>
     <display-name>This is the display name of my J2EE component</display-name>
     <servlet-name>BrandOperate</servlet-name>
     <servlet-class>erp.BrandOperate</servlet-class>
   </servlet>
-   <servlet>
+  <servlet>
     <description>This is the description of my J2EE component</description>
     <display-name>This is the display name of my J2EE component</display-name>
     <servlet-name>EmployeeOperate</servlet-name>
     <servlet-class>erp.EmployeeOperate</servlet-class>
   </servlet>
-   <servlet>
+  <servlet>
     <description>This is the description of my J2EE component</description>
     <display-name>This is the display name of my J2EE component</display-name>
     <servlet-name>StockOperate</servlet-name>
@@ -53,12 +49,6 @@
     <servlet-name>SqlOperate</servlet-name>
     <servlet-class>common.SqlOperate</servlet-class>
   </servlet>
-
-
-  
-
-
-
   <servlet-mapping>
     <servlet-name>UserOperate</servlet-name>
     <url-pattern>/servlet/UserOperate</url-pattern>
@@ -91,14 +81,13 @@
     <servlet-name>EmployeeOperate</servlet-name>
     <url-pattern>/servlet/EmployeeOperate</url-pattern>
   </servlet-mapping>
- 
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
-  <resource-ref>   
-  <description>webdb</description>   
-  <res-ref-name>jdbc/webdb</res-ref-name>   
-  <res-type>javax.sql.DataSource</res-type>   
-  <res-auth>Container</res-auth>   
-</resource-ref>
+  <resource-ref>
+    <description>webdb</description>
+    <res-ref-name>jdbc/webdb</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
 </web-app>
